--- a/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-list/felhasznalo-list.component.html
@@ -8,37 +8,13 @@
                [enUj]="!eppFrissit && mod" (Uj)="uj()"
                [visZoom]="felhasznaloservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th *ngIf="felhasznaloservice.zoom"></th>
-      <th>Id</th>
-      <th>Azonosító</th>
-      <th>Név</th>
-      <th>Telefon</th>
-      <th>Email</th>
-      <th>Státusz</th>
-      <th>A státusz kelte</th>
-      <th>Log</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of felhasznaloservice.Dto; let i = index">
-      <td *ngIf="felhasznaloservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="setClickedRow(i)">{{item.Felhasznalokod}}</td>
-      <td>{{item.Azonosito}}</td>
-      <td>{{item.Nev}}</td>
-      <td>{{item.Telefon}}</td>
-      <td>{{item.Email}}</td>
-      <td>{{item.Statusz}}</td>
-      <td>{{item.Statuszkelte | datehun}}</td>
-      <td *ngIf="item.Logonlog">Igen</td>
-      <td *ngIf="!item.Logonlog">Nem</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="felhasznaloservice.Dto"
+             [colsets]="felhasznaloservice.GridSettings"
+             [zoom]="felhasznaloservice.zoom"
+             [(selectedrow)]="ti"
+             (forzoom)="selectforzoom($event)"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="felhasznaloservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
