--- a/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
+++ b/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
@@ -8,22 +8,13 @@
                [enUj]="!eppFrissit && mod" (Uj)="uj()"
                [visZoom]="helysegservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th *ngIf="helysegservice.zoom"></th>
-      <th>Id</th>
-      <th>Helység</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of helysegservice.Dto; let i = index">
-      <td *ngIf="helysegservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Helysegkod}}</td>
-      <td>{{item.Helysegnev}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="helysegservice.Dto"
+             [colsets]="helysegservice.GridSettings"
+             [zoom]="helysegservice.zoom"
+             [(selectedrow)]="ti"
+             (forzoom)="selectforzoom($event)"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="helysegservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
