--- a/src/app/primitiv/termekdij/termekdij-list/termekdij-list.component.html
+++ b/src/app/primitiv/termekdij/termekdij-list/termekdij-list.component.html
@@ -8,26 +8,13 @@
                [enUj]="!eppFrissit && mod" (Uj)="uj()"
                [visZoom]="termekdijservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th *ngIf="termekdijservice.zoom"></th>
-      <th>Id</th>
-      <th>KT</th>
-      <th>Megnevezés</th>
-      <th>Egységár</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of termekdijservice.Dto; let i = index">
-      <td *ngIf="termekdijservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Termekdijkod}}</td>
-      <td>{{item.Termekdijkt}}</td>
-      <td>{{item.Termekdijmegnevezes}}</td>
-      <td>{{item.Termekdijegysegar}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="termekdijservice.Dto"
+             [colsets]="termekdijservice.GridSettings"
+             [zoom]="termekdijservice.zoom"
+             [(selectedrow)]="ti"
+             (forzoom)="selectforzoom($event)"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="termekdijservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
