--- a/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -8,24 +8,13 @@
                [enUj]="!eppFrissit && mod" (Uj)="uj()"
                [visZoom]="afakulcsservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th *ngIf="afakulcsservice.zoom"></th>
-      <th>Id</th>
-      <th>ÁFA kulcs</th>
-      <th>Az ÁFA mértéke, %</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of afakulcsservice.Dto; let i = index">
-      <td *ngIf="afakulcsservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Afakulcskod}}</td>
-      <td>{{item.Afakulcs1}}</td>
-      <td>{{item.Afamerteke}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="afakulcsservice.Dto"
+             [colsets]="afakulcsservice.GridSettings"
+             [zoom]="afakulcsservice.zoom"
+             [(selectedrow)]="ti"
+             (forzoom)="selectforzoom($event)"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="afakulcsservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
