--- a/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-list/fizetesimod-list.component.html
@@ -7,23 +7,13 @@
                [enUj]="!eppFrissit" (Uj)="uj()"
                [visZoom]="fizetesimodservice.zoom" (StopZoom)="stopzoom()">
   </app-toolbar>
-  <table class="table table-bordered table-sm table-responsive" style="border: none">
-    <thead>
-    <tr>
-      <th *ngIf="fizetesimodservice.zoom"></th>
-      <th>Id</th>
-      <th>Fizetési mód</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of fizetesimodservice.Dto; let i = index">
-      <td *ngIf="fizetesimodservice.zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"
-          (click)="selectforzoom(i)"><i class="fa fa-check" aria-hidden="true"></i></td>
-      <td style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="setClickedRow(i)">{{item.Fizetesimodkod}}</td>
-      <td>{{item.Fizetesimod1}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <app-tabla [items]="fizetesimodservice.Dto"
+             [colsets]="fizetesimodservice.GridSettings"
+             [zoom]="fizetesimodservice.zoom"
+             [(selectedrow)]="ti"
+             (forzoom)="selectforzoom($event)"
+             (forid)="setClickedRow($event)">
+  </app-tabla>
 
   <app-errormodal [cim]="fizetesimodservice.cim"></app-errormodal>
   <app-spinner *ngIf="eppFrissit"></app-spinner>
