--- a/src/app/kifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
+++ b/src/app/kifizetes/bizonylat-kifizetes-egy/bizonylat-kifizetes-egy.component.html
@@ -1,9 +1,10 @@
 <div class="alapkeret">
   <h5>{{bizonylatkifizetesservice.cim}}</h5>
-  <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum}}
+  <div style="margin-bottom: 10px; font-size: smaller">
+      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Datum | datehun}}
+      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Osszeg | number: '1.2-2'}}
       {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Penznem}}
-      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Fizetesimod}}</div>
+      {{bizonylatkifizetesservice.Dto[bizonylatkifizetesservice.DtoSelectedIndex].Fizetesimod}}
   </div>
   <div>
     <nav>
