--- a/src/app/particio/particio-nav/particio-nav.component.html
+++ b/src/app/particio/particio-nav/particio-nav.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.NavUrl" name="m1">
+               [(ngModel)]="Dto.NavUrl" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -19,7 +19,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.NavFelhasznaloazonosito" name="m2">
+               [(ngModel)]="Dto.NavFelhasznaloazonosito" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -29,7 +29,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.NavFelhasznalojelszo" name="m3">
+               [(ngModel)]="Dto.NavFelhasznalojelszo" name="m3">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -39,7 +39,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m4"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.NavAlairokulcs" name="m4">
+               [(ngModel)]="Dto.NavAlairokulcs" name="m4">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -49,7 +49,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m5"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.NavCserekulcs" name="m5">
+               [(ngModel)]="Dto.NavCserekulcs" name="m5">
       </div>
     </div>
 
@@ -59,7 +59,4 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
