--- a/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
+++ b/src/app/particio/particio-bizonylat/particio-bizonylat.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BizonylatBizonylatkepIratkod" name="m1">
+               [(ngModel)]="Dto.BizonylatBizonylatkepIratkod" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BizonylatEredetipeldanyokSzama" name="m2">
+               [(ngModel)]="Dto.BizonylatEredetipeldanyokSzama" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -30,7 +30,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.BizonylatMasolatokSzama" name="m3">
+               [(ngModel)]="Dto.BizonylatMasolatokSzama" name="m3">
       </div>
     </div>
 
@@ -40,7 +40,4 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
