--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret">
   <h5>{{particioservice.cim}}</h5>
   <div style="margin-bottom: 10px">
-    <div style="font-size: smaller">{{particioservice.Dto.Megnevezes}}</div>
+    <div style="font-size: smaller">{{Dto.Megnevezes}}</div>
   </div>
   <div>
     <nav>
@@ -40,22 +40,46 @@
     <app-blank></app-blank>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 1">
-    <app-particio-szallito></app-particio-szallito>
+    <app-particio-szallito [eppFrissit]="eppFrissit"
+                           [Dto]="Dto"
+                           (OkClick)="SzerkesztesOk($event)"
+                           (CancelClick)="SzerkesztesCancel()">
+    </app-particio-szallito>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 2">
-    <app-particio-nav></app-particio-nav>
+    <app-particio-nav [eppFrissit]="eppFrissit"
+                      [Dto]="Dto"
+                      (OkClick)="SzerkesztesOk($event)"
+                      (CancelClick)="SzerkesztesCancel()">
+    </app-particio-nav>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 3">
-    <app-particio-smtp></app-particio-smtp>
+    <app-particio-smtp [eppFrissit]="eppFrissit"
+                       [Dto]="Dto"
+                       (OkClick)="SzerkesztesOk($event)"
+                       (CancelClick)="SzerkesztesCancel()">
+    </app-particio-smtp>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 4">
-    <app-particio-bizonylat></app-particio-bizonylat>
+    <app-particio-bizonylat [eppFrissit]="eppFrissit"
+                            [Dto]="Dto"
+                            (OkClick)="SzerkesztesOk($event)"
+                            (CancelClick)="SzerkesztesCancel()">
+    </app-particio-bizonylat>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 5">
-    <app-particio-projekt></app-particio-projekt>
+    <app-particio-projekt [eppFrissit]="eppFrissit"
+                          [Dto]="Dto"
+                          (OkClick)="SzerkesztesOk($event)"
+                          (CancelClick)="SzerkesztesCancel()">
+    </app-particio-projekt>
   </ng-container>
   <ng-container *ngIf="particioservice.EgyMode === 6">
-    <app-particio-volume></app-particio-volume>
+    <app-particio-volume [eppFrissit]="eppFrissit"
+                         [Dto]="Dto"
+                         (OkClick)="SzerkesztesOk($event)"
+                         (CancelClick)="SzerkesztesCancel()">
+    </app-particio-volume>
   </ng-container>
 
   <app-errormodal [cim]="particioservice.cim"></app-errormodal>
