--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektAjanlatIratkod" name="m1">
+               [(ngModel)]="Dto.ProjektAjanlatIratkod" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -19,7 +19,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektElegedettsegifelmeresIratkod" name="m2">
+               [(ngModel)]="Dto.ProjektElegedettsegifelmeresIratkod" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -29,7 +29,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesDemaszIratkod" name="m3">
+               [(ngModel)]="Dto.ProjektKeszrejelentesDemaszIratkod" name="m3">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -39,7 +39,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m4"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesElmuemaszIratkod" name="m4">
+               [(ngModel)]="Dto.ProjektKeszrejelentesElmuemaszIratkod" name="m4">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -49,7 +49,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m5"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektKeszrejelentesEonIratkod" name="m5">
+               [(ngModel)]="Dto.ProjektKeszrejelentesEonIratkod" name="m5">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -59,7 +59,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m6"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektMunkalapIratkod" name="m6">
+               [(ngModel)]="Dto.ProjektMunkalapIratkod" name="m6">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -69,7 +69,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m7"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektSzallitasiszerzodesIratkod" name="m7">
+               [(ngModel)]="Dto.ProjektSzallitasiszerzodesIratkod" name="m7">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -79,7 +79,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m8"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektSzerzodesIratkod" name="m8">
+               [(ngModel)]="Dto.ProjektSzerzodesIratkod" name="m8">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -89,7 +89,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m9"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.ProjektFeltetelesszerzodesIratkod" name="m9">
+               [(ngModel)]="Dto.ProjektFeltetelesszerzodesIratkod" name="m9">
       </div>
     </div>
 
@@ -99,8 +99,5 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
