--- a/src/app/particio/particio-smtp/particio-smtp.component.html
+++ b/src/app/particio/particio-smtp/particio-smtp.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-2">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="particioservice.Dto.SmtpKlienstipus" name="m1">
+                [(ngModel)]="Dto.SmtpKlienstipus" name="m1">
           <option>Gmail</option>
         </select>
       </div>
@@ -21,7 +21,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.SmtpFelhasznaloazonosito" name="m2">
+               [(ngModel)]="Dto.SmtpFelhasznaloazonosito" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -31,7 +31,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.SmtpFelhasznalojelszo" name="m3">
+               [(ngModel)]="Dto.SmtpFelhasznalojelszo" name="m3">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -41,7 +41,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m4"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SmtpKuldoneve" name="m4">
+               [(ngModel)]="Dto.SmtpKuldoneve" name="m4">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -51,7 +51,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m5"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SmtpKuldoemailcime" name="m5">
+               [(ngModel)]="Dto.SmtpKuldoemailcime" name="m5">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -61,7 +61,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="m6"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SmtpCustomhost" name="m6">
+               [(ngModel)]="Dto.SmtpCustomhost" name="m6">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -71,7 +71,7 @@
       <div class="col-md-1">
         <input type="number" class="form-control form-control-sm" id="m7"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.SmtpCustomport" name="m7">
+               [(ngModel)]="Dto.SmtpCustomport" name="m7">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -80,7 +80,7 @@
       </div>
       <div class="col-md-1">
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="particioservice.Dto.SmtpTls" name="m8">
+                [(ngModel)]="Dto.SmtpTls" name="m8">
           <option value="false">Nem</option>
           <option value="trueng">Igen</option>
         </select>
@@ -93,7 +93,7 @@
       <div class="col-md-4">
         <input type="text" class="form-control form-control-sm" id="m9"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.Hibaertesitesemailcimek" name="m9">
+               [(ngModel)]="Dto.Hibaertesitesemailcimek" name="m9">
       </div>
     </div>
 
@@ -103,8 +103,5 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
