--- a/src/app/particio/particio-szallito/particio-szallito.component.html
+++ b/src/app/particio/particio-szallito/particio-szallito.component.html
@@ -10,7 +10,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SzallitoNev" name="m1">
+               [(ngModel)]="Dto.SzallitoNev" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -20,7 +20,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off" maxlength="10"
-               [(ngModel)]="particioservice.Dto.SzallitoIranyitoszam" name="m2">
+               [(ngModel)]="Dto.SzallitoIranyitoszam" name="m2">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -30,7 +30,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m3"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SzallitoHelysegnev" name="m3">
+               [(ngModel)]="Dto.SzallitoHelysegnev" name="m3">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -40,7 +40,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m4"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SzallitoUtcahazszam" name="m4">
+               [(ngModel)]="Dto.SzallitoUtcahazszam" name="m4">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -50,7 +50,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m5"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SzallitoBankszamla1" name="m5">
+               [(ngModel)]="Dto.SzallitoBankszamla1" name="m5">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -60,7 +60,7 @@
       <div class="col-md-3">
         <input type="text" class="form-control form-control-sm" id="m6"
                autocomplete="off" maxlength="50"
-               [(ngModel)]="particioservice.Dto.SzallitoBankszamla2" name="m6">
+               [(ngModel)]="Dto.SzallitoBankszamla2" name="m6">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -70,7 +70,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m7"
                autocomplete="off" maxlength="8"
-               [(ngModel)]="particioservice.Dto.SzallitoAdotorzsszam" name="m7">
+               [(ngModel)]="Dto.SzallitoAdotorzsszam" name="m7">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -80,7 +80,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m8"
                autocomplete="off" maxlength="1"
-               [(ngModel)]="particioservice.Dto.SzallitoAdoafakod" name="m8">
+               [(ngModel)]="Dto.SzallitoAdoafakod" name="m8">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -90,7 +90,7 @@
       <div class="col-md-1">
         <input type="text" class="form-control form-control-sm" id="m9"
                autocomplete="off" maxlength="2"
-               [(ngModel)]="particioservice.Dto.SzallitoAdomegyekod" name="m9">
+               [(ngModel)]="Dto.SzallitoAdomegyekod" name="m9">
       </div>
     </div>
 
@@ -100,8 +100,5 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
