--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -9,7 +9,7 @@
       <div class="col-md-2">
         <input type="text" class="form-control form-control-sm" id="m1"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.VolumeUjvolumeMaxmeret" name="m1">
+               [(ngModel)]="Dto.VolumeUjvolumeMaxmeret" name="m1">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -19,7 +19,7 @@
       <div class="col-md-5">
         <input type="text" class="form-control form-control-sm" id="m2"
                autocomplete="off"
-               [(ngModel)]="particioservice.Dto.VolumeUjvolumeEleresiut" name="m2">
+               [(ngModel)]="Dto.VolumeUjvolumeEleresiut" name="m2">
       </div>
     </div>
 
@@ -29,8 +29,5 @@
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-  <app-errormodal [cim]="particioservice.cim"></app-errormodal>
-  <app-spinner *ngIf="eppFrissit"></app-spinner>
 </div>
 
